--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   </script>
 </head>
 <body>
+  <script src="flutter_bootstrap.js" async></script>
   <script src="main.dart.js" defer></script>
 </body>
 </html>
