--- a/index.html
+++ b/index.html
@@ -14,28 +14,27 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="https://loqmanali.github.io/CountryCodeSearch/>
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Country Code Search">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="country_code_search">
+  <meta name="apple-mobile-web-app-title" content="Country Code Search">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>country_code_search</title>
+  <title>Country Code Search</title>
   <link rel="manifest" href="manifest.json">
   
   <!-- Add these lines for PWA support -->
   <meta name="theme-color" content="#ffffff">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
-  
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
